# omnibase

./: .gitignore  .onexignore  .onextree  .onexversion  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .stamperignore  .yaml_issues_db.json  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  debug_tokenization.py  docker-compose.dev.yml  identify_header_only_changes.py  kafka_test_output.txt  mypy.out  mypy_batch10_report.txt  mypy_batch6_report.txt  parity_output.json  parity_results.json  pr_commits.txt  pr_description.md  pr_description_feat-m0-cli-tools-validate-stamp.md  pr_diff.txt  pr_metrics.txt  project.onex.yaml  pyproject.toml  pytest.ini  refactor_tools.sh  revert_header_files.py  revert_header_only_changes.sh  revert_incorrect_stamps.py  test_github_actions.py  test_idempotency_bug_reproduction.py  test_output.txt  test_output2.txt  test_output3.txt  test_output4.txt  test_stamped_content2.py  (+2 more)
.cursor/: mcp.json
.cursor/rules/: cli_commands.mdc  debug_log.mdc  interface_design_protocol_vs_abc.mdc  modes.mdc  naming_conventions.mdc  node_standards.mdc  pr_description.mdc  standards.mdc  testing.mdc  typing_and_protocols.mdc  velocity_log.mdc
.github/: .onexignore  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.github/workflows_disabled/: ci.yml
config/: services.yaml
docs/: README.md  _mkdocs.yml  architectural_scrutiny.md  architecture-node-composition.md  architecture-node-monadic-core.md  architecture-security-design.md  changelog.md  cli_examples.md  cli_interface.md  configuration.md  contributing.md  developer_guide.md  env-template.md  error_handling.md  error_taxonomy.md  execution_context.md  future_enhancements.md  graph_extraction.md  guide-handlers-implementation.md  guide-incident-response.md  guide-security-implementation.md  guide-security-monitoring.md  handlers_registry_api.md  index.md  infrastructure.md  lifecycle_policy.md  metadata.md  metrics_dashboard.md  migration_log.md  migration_milestone_checklist.md  monitoring.md  onex_node_spec.md  orchestration.md  protocols.md  protocols_and_models.md  quickstart.md  reference-data-models.md  reference-handlers-protocol.md  reference-handlers-registry.md  reference-protocols-core.md  (+11 more)
docs/adr/: 0001-protocol_vs_abc.md  adr-005-event-schema-future-enhancements.md
docs/architecture/: registry_backend_choices.md  repository_structure.md  scenario_real_dependencies_proposal.md
docs/changelogs/: RELEASE_NOTES.md
docs/design/: stamping_engine.md
docs/dev_logs/: parity_validator_migration.md
docs/error_handling/: index.md  observability.md  retry.md
docs/examples/: telemetry_demo.py
docs/governance/: plugin_handler_governance.md
docs/guides/: cli_quickstart.md  getting_started.md
docs/handlers/: placement_guidelines.md
docs/injested/: agent_integration.md  cascading_strategy.md  cli_interface.md  config.md  error_handling.md  error_handling_observability.md  error_retry.md  execution.md  execution_context.md  graph_extraction.md  metadata.md  metadata_canonical.md  metadata_dependency.md  metadata_lineage.md  orchestration.md  orchestration_framework.md  orchestrator_lifecycle.md  protocol_apc.md  protocols.md  registry.md  registry_discovery.md  runtime_behavior.md  sandbox.md  security.md  security_capability.md  storage.md  structured_testing.md  toolchains_pipelines.md
docs/metadata/: dependency.md  index.md  lineage.md  validation.md
docs/milestones/: implementation_checklist_registry_node.md  implementation_checklist_registry_node_port_allocation.md  milestone_01.md  milestone_02.md  milestone_03.md  milestone_04.md  milestone_05.md  milestone_06.md  milestone_07.md  milestone_08.md  milestone_09.md  milestone_0_bootstrap.md  milestone_0_checklist.md  milestone_10.md  milestone_11.md  milestone_12.md  milestone_1_checklist.md  milestone_1_completed.md  milestone_2_planning.md  milestone_3_planning.md  milestone_standards_review.md  milestone_typing_standards_review.md  onex_execution_architecture.md  overview.md  structured_logging_proposal.md
docs/nodes/: caching_and_composite_nodes.md  canary_node_cli_alignment.md  developer_guide.md  functional_monadic_node_architecture.md  future_roadmap.md  graph_resolution.md  graphql_vs_onex.md  index.md  legacy_migration.md  logger_node_specification.md  node_contracts.md  node_typology.md  performance_memory_and_cost.md  prompt_blocks_and_model_nodes.md  protocol_definitions.md  sessions_and_streaming.md  state_reducers.md  structural_conventions.md  templates_scaffolding.md
docs/onex/: conflicts_pending_resolution.md  event_bus.md  event_bus_expansion_and_docs.md  index.md  registry_node_introspection.md  registry_node_proxy_invocation.md  (+1 more)
examples/: telemetry_demo.py
legacy/: README.md
nodes/: 00_state_reducers.md  01_node_contracts.md  02_graph_resolution.md  03_caching_and_composite_nodes.md  04_sessions_and_streaming.md  05_prompt_blocks_and_model_nodes.md  06_performance_memory_and_cost.md  07_graphql_vs_onex.md
notes/: future_enhancements_recommendations.md
onex/: one_metadata_stamper_spec_v0.1.md  one_protocol_spec_v0.1_draft.md  onex_lifecycle_and_batch_model.md  onex_protocol_spec_v0.1_baseline.md  onex_result_reporting_and_ci.md
schema/: onex_events.sql
scripts/: __init__.py  check_idempotency_assertions.py  ci_orphaned_fixtures.py  clean_contract_files.py  clean_node_files.py  cleanup_onexignore_files.py  comprehensive_yaml_fixer.py  extract_milestones.py  fix_yaml_formatting.py  fix_yamllint_issues.py  git_yaml_fixer.py  hybrid_yaml_fixer.py  lint_error_codes.py  postgres-init.sql  precommit_model_scenario_validation.sh  pytest_pre_push.sh  scan_metadata_blocks.py  schema_fixer.py  setup-dev-services.sh  systematic_yaml_fixer.py  validate_nodes.sh  yaml_issues_tracker.py  yamllint_fixer.py
src/: .onextree
tests/: __init__.py  conftest.py  test_cli_node_parity.py  test_metadata_blocks.py  test_schema_loader.py
tools/: add_event_bus_to_emit_log_event.py  run_scenario.py  start_kafka_with_zookeeper.sh
(+2032 files in other folders)
