[tool.poetry]
name = "omnibase"
version = "0.1.0"
description = "ONEX/OmniBase Bootstrap – Canonical Node Architecture and CLI"
authors = ["OmniBase Team <team@omnibase.org>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyyaml = "^6.0.0"
jsonschema = "^4.21.1"
pydantic = "^2.0.0"
typer = "^0.12.3"
typing-extensions = "^4.13.2"
click = "<8.2.0"
pathspec = "^0.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-mock = "^3.12.0"
pytest-cov = "^6.1.1"
pydocstyle = "^6.3.0"
docformatter = "^1.7.5"
types-pyyaml = "^6.0.12.20250402"
types-requests = "^2.32.0.20250328"
types-toml = "^0.10.8.20240310"
pytest-env = "^1.1.5"
typing-extensions = "^4.13.2"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
types-jsonschema = "^4.23.0.20250516"
ruff = "0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# plugins = ["pydantic.mypy"]
mypy_path = "src"
exclude = [
    "src/omnibase/runtime/node_runner.py",
    "src/omnibase/core/core_file_type_handler_registry.py",
    "src/omnibase/mixin/mixin_canonical_serialization.py",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poetry.scripts]
onex = "omnibase.cli_tools.onex.v1_0_0.cli_main:app"

# Plugin entry points for ONEX plugin discovery system
# These entry points allow plugins to be automatically discovered and loaded
[tool.poetry.plugins."omnibase.handlers"]
# File type handler plugins
python_handler = "omnibase.runtimes.onex_runtime.v1_0_0.handlers.handler_python:PythonHandler"
yaml_handler = "omnibase.runtimes.onex_runtime.v1_0_0.handlers.handler_metadata_yaml:MetadataYAMLHandler"
markdown_handler = "omnibase.runtimes.onex_runtime.v1_0_0.handlers.handler_markdown:MarkdownHandler"
ignore_handler = "omnibase.handlers.handler_ignore:IgnoreFileHandler"

[tool.poetry.plugins."omnibase.validators"]
# Validator plugins (examples for future implementation)
# metadata_validator = "omnibase.plugins.validators.metadata_validator:MetadataValidator"
# schema_validator = "omnibase.plugins.validators.schema_validator:SchemaValidator"

[tool.poetry.plugins."omnibase.tools"]
# Tool plugins (examples for future implementation)
# stamper_tool = "omnibase.tools.stamper_tool:StamperTool"
# docstring_generator = "omnibase.tools.docstring_generator:DocstringGenerator"

[tool.poetry.plugins."omnibase.fixtures"]
# Fixture plugins (examples for future implementation)
# registry_fixture = "omnibase.fixtures.registry_fixture:RegistryFixture"
# file_fixture = "omnibase.fixtures.file_fixture:FileFixture"

[tool.poetry.plugins."omnibase.nodes"]
# Node plugins (for future M2 development)
# custom_node = "omnibase.plugins.nodes.custom_node:CustomNode"

[tool.poetry.plugins."omnibase.logger_format_handlers"]
# Logger format handler plugins for the logger node
# These handlers provide different output formats for log entries
json_format = "omnibase.nodes.logger_node.v1_0_0.handlers.handler_json_format:JsonFormatHandler"
yaml_format = "omnibase.nodes.logger_node.v1_0_0.handlers.handler_yaml_format:YamlFormatHandler"
markdown_format = "omnibase.nodes.logger_node.v1_0_0.handlers.handler_markdown_format:MarkdownFormatHandler"
text_format = "omnibase.nodes.logger_node.v1_0_0.handlers.handler_text_format:TextFormatHandler"
csv_format = "omnibase.nodes.logger_node.v1_0_0.handlers.handler_csv_format:CsvFormatHandler"

[[tool.poetry.packages]]
include = "omnibase"
from = "src"